Fixed styling issue that cropped image on ipad

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 body {
   background-image: url("../images/easy/castle.png");
   background-repeat: no-repeat;
+  background-size: cover;
   height: 100vh;
   text-align: center;
 }
